--- a/client/pages/profile/profile.css
+++ b/client/pages/profile/profile.css
@@ -43,24 +43,21 @@ main {
     --btn-part-size: 30px;
     --btn-img-size: 20px;
 }
-.input-writable {
-    color: black;
-    text-shadow: none;
-    background-color: white;
-}
 
 .element-inner-container {
     position: relative;
-    overflow: hidden;
+    overflow-x: auto;
     width: 100%;
+    height: 43px;
+    white-space: nowrap;
 }
 .element-input.tags {
     display: inline-block;
     white-space: nowrap;
-}
-.tags#email-tag {
-    background: none;
-    height: 38px;
+    min-width: 260px;
+    width: max-content;
+    overflow-x: auto;
+    max-width: 90%;
 }
 .tags-content {
     position: absolute;
@@ -72,6 +69,11 @@ main {
     background-color: var(--white-33-opacity);
     padding: 5px 15px;
     max-width: 100%;
+}
+.input-writable {
+    color: black;
+    text-shadow: none;
+    background-color: white;
 }
 
 #profile-border {
