home page: improved filter to work without filter button 🫣

--- a/client/pages/home/home.css
+++ b/client/pages/home/home.css
@@ -11,6 +11,9 @@ body {
     margin: 0;
 }
 
+#filter-container .element-container:first-of-type {
+    padding-top: 5px;
+}
 .tags {
     justify-content: space-evenly;
 }
