--- a/client/pages/authentication/authentication.css
+++ b/client/pages/authentication/authentication.css
@@ -9,12 +9,16 @@ body {
     margin: 0;
 }
 main {
-    display: flex;
+    display: grid;
+    grid-template-areas:
+            "form"
+            "cat";
     justify-content: center;
     align-items: center;
 }
 
 .element-border {
+    grid-area: form;
     margin-top: 5%;
     width: 400px;
 }
@@ -30,6 +34,17 @@ main {
 }
 .btn-normal-grey:hover {
     text-shadow: 0 0 15px black;
+}
+
+.element-cat {
+    display: flex;
+    grid-area: cat;
+    margin-top: 2%;
+    justify-content: center;
+}
+
+.element-cat img {
+    width: 400px;
 }
 
 /* Responsive Layout */
