--- a/client/client_pages/authentication/authentication.css
+++ b/client/client_pages/authentication/authentication.css
@@ -1,12 +1,10 @@
 @import url(/client/base.css);
 
 body {
-    display: grid;
     grid-template-areas:
         "h"
         "m";
     grid-template-rows: 135px auto;
-    margin: 0;
 }
 main {
     display: flex;
@@ -32,9 +30,8 @@ main {
     text-shadow: 0 0 15px black;
 }
 
-/* Responsive Layout */
-@media (max-width: 930px) {
-    .btn-normal-grey {
-        display: flex;
+@media (max-width: 460px) {
+    .element-border {
+        width: 100%;
     }
 }
