--- a/client/client_pages/home/home.css
+++ b/client/client_pages/home/home.css
@@ -1,42 +1,34 @@
 @import url(/client/base.css);
 
 body {
-    display: grid;
     grid-template-areas:
         "h h"
         "s m"
         "f f";
     grid-template-columns: 335px auto;
     grid-template-rows: 135px auto 35px;
-    margin: 0;
 }
 
 #filter-container .element-container:first-of-type {
     padding-top: 5px;
 }
 .tags {
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
-.tag:hover {
-    color: black;
-    text-shadow: none;
-    background-color: white;
-}
+.tag:hover,
 .tag.selected {
     color: black;
     text-shadow: none;
     background-color: white;
 }
-
 .search-ingredients input {
-    font-size: 1em;
     width: calc(100% - 10px);
     height: 40px;
     padding: 0 5% 0 15%;
     border: 0.2em solid var(--white-33-opacity);
-    background-size: 16px;
     margin: 5px;
 }
+.search-ingredients input,
 .search-ingredients input:hover {
     background-size: 16px;
 }
@@ -44,7 +36,45 @@ body {
 #random-button {
     margin-top: 20px;
 }
-
 .cocktails-container:hover > :not(:hover) {
     opacity: 0.5;
+}
+
+@media (max-width: 835px) {
+    :root {
+        --title-font-size: 1.25rem;
+        --cocktail-name-font-size: 1.0rem;
+        --cocktail-rating-font-size: 1.0rem;
+        --cocktail-img-size: 135px;
+    }
+    body {
+        grid-template-areas:
+        "h"
+        "s"
+        "m"
+        "f";
+        grid-template-columns: auto;
+        grid-template-rows: 135px min-content auto 35px;
+    }
+    #sidebar {
+        padding: 0 30px 30px 30px;
+    }
+    .element-inner-container.tags {
+        gap: 5px;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 710px) {
+    body {
+        grid-template-rows: 200px min-content auto 35px;
+    }
+    header {
+        grid-template-areas:
+        "logo profile"
+        "middle middle";
+        grid-template-columns: min-content auto;
+        grid-template-rows: max-content;
+        padding: 30px 30px 0 30px;
+    }
 }
