--- a/client/client_pages/recipe/recipe.css
+++ b/client/client_pages/recipe/recipe.css
@@ -1,41 +1,27 @@
-
 @import url(/client/base.css);
 
 :root {
-    --title-font-size: 2rem;
+    --base-font-size: 1.35rem;
+    --tag-font-size: 1.5rem;
     --main-font-size: 1.5rem;
-    --base-font-size: 1rem;
+    --title-font-size: 2rem;
+    --cocktail-name-font-size: 1.65rem;
     --cocktail-img-size: 300px;
-    --btn-part-size: 42px;
-    --btn-img-size: 24px;
 }
 body {
-    display: grid;
     grid-template-areas:
         "h"
         "m"
         "f";
     grid-template-rows: 135px auto 35px;
-    margin: 0;
-    font-size: var(--base-font-size);
 }
-.normal-main {
-    display: grid;
-    grid-template-areas:
-        "recipe"
-        "comments";
-    gap: 35px;
-}
-.account-main {
+main {
     display: grid;
     grid-template-areas:
         "recipe recipe"
-        "rate comments";
+        "rate null";
     grid-template-columns: 350px auto;
     gap: 35px;
-}
-#main {
-    display: none;
 }
 
 input::-webkit-slider-thumb {
@@ -74,19 +60,8 @@ input::-webkit-slider-thumb {
 }
 
 .title-label {
-    font-size: var(--title-font-size);
     padding: 5px 0 0 0;
 }
-.element-inner-container {
-    font-size: 1.5em;
-}
-.cocktail-title-label {
-    font-size: 2rem;
-}
-.cocktail-rating-label {
-    font-size: 1.5rem;
-}
-
 .element-border {
     padding-top: 15px;
 }
@@ -152,12 +127,11 @@ input::-webkit-slider-thumb {
     justify-content: space-between;
 }
 
-/* Responsive Layout */
 @media (max-width: 1100px) {
     :root {
-        --base-font-size: 0.9rem;
+        --base-font-size: 1.15rem;
+        --tag-font-size: 1.35rem;
         --title-font-size: 1.8rem;
-        --cocktail-img-size: 300px;
         --btn-part-size: 39px;
         --btn-img-size: 23px;
     }
@@ -176,31 +150,28 @@ input::-webkit-slider-thumb {
         "instructions instructions";
         grid-template-columns: auto 48px;
     }
-    .account-main {
-        display: grid;
+    main {
         grid-template-areas:
         "recipe"
-        "rate"
-        "comments";
+        "rate";
         grid-template-columns: auto;
-        gap: 35px;
     }
     .element-border {
         width: 100%;
     }
+    .tags, .btn-container, .tag-inner-container,
     #btn-rate-container.btn-inner-container {
         justify-content: center;
     }
     .btn-container {
         gap: 35px;
-        justify-content: center;
     }
     #delete-btn.btn-normal-grey {
         display: flex;
     }
 
     .cocktail-container {
-        margin-left: 97px;
+        margin-left: 70px;
     }
     .ingredients .element-inner-container {
         max-height: none;
@@ -209,7 +180,18 @@ input::-webkit-slider-thumb {
         display: block;
         column-count: 1;
     }
-    .tags {
-        justify-content: center;
+}
+
+@media (max-width: 500px) {
+    :root {
+        --base-font-size: 1.0rem;
+        --tag-font-size: 1.2rem;
+        --main-font-size: 1.2rem;
+        --btn-small-font-size: 1.2rem;
+        --btn-big-font-size: 1.5rem;
+        --title-font-size: 1.5rem;
+        --cocktail-img-size: 200px;
+        --btn-part-size: 37px;
+        --btn-img-size: 22px;
     }
 }
