recovered responsive design on login & signup 🤓

--- a/client/client_pages/authentication/authentication.css
+++ b/client/client_pages/authentication/authentication.css
@@ -45,7 +45,7 @@ main {
 }
 
 @media (max-width: 460px) {
-    .element-border {
+    .element-border, .element-cat img {
         width: 100%;
     }
 }
