2nd FE component: fixing required fields 💀

--- a/client/base.css
+++ b/client/base.css
@@ -417,5 +417,6 @@ input::-webkit-slider-thumb {
     .search-header,
     .search-header input {
         width: 100%;
+        max-width: 400px;
     }
 }
