--- a/client/base.css
+++ b/client/base.css
@@ -388,7 +388,7 @@ input::-webkit-slider-thumb {
     background-color: var(--white-33-opacity);
 }
 .alert-not-fixed {
-    margin: 0 5px 0 5px;
+    margin: 0 5px 15px 5px;
     position: revert;
     left: 0;
     transform: none;
